유효성검사 에러메세지 수정

--- a/2weeks/src/main/resources/messages/messages_ko.properties
+++ b/2weeks/src/main/resources/messages/messages_ko.properties
@@ -1,9 +1,10 @@
 NotEmpty.member.user_Id = \uC544\uC774\uB514\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694
-Length.member.user_Id=\uC544\uC774\uB514\uB294 6~10\uAE00\uC790\uC774\uC5B4\uC57C \uD569\uB2C8\uB2E4
+Pattern.member.user_Id= 5~10\uC790\uC758 \uC601\uBB38 \uB300/\uC18C\uBB38\uC790, \uC22B\uC790\uB9CC \uC0AC\uC6A9 \uAC00\uB2A5\uD569\uB2C8\uB2E4.
+user_Id=\uC5D0\uB7EC \uBA54\uC138\uC9C0 \uD14C\uC2A4\uD2B8
+NotEmpty.member.user_Email = \uD544\uC218 \uC815\uBCF4\uC785\uB2C8\uB2E4.
+Email.member.user_Email 
 
-NotEmpty.member.user_Email = \uC774\uBA54\uC77C\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
-Email.signUp.user_Email
+NotEmpty.member.user_Pw = \uD544\uC218 \uC815\uBCF4\uC785\uB2C8\uB2E4.
+Pattern.member.user_Pw = 8\uC790 \uC774\uC0C1\uC758 \uC601\uBB38 \uB300/\uC18C\uBB38\uC790,\uC22B\uC790,\uD2B9\uC218\uBB38\uC790(#?!@$%^&*-)\uB97C \uC0AC\uC6A9\uD558\uC138\uC694.
 
-NotEmpty.member.user_Pw = \uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
-Pattern.member.user_Pw = \uBE44\uBC00\uBC88\uD638 \uC591\uC2DD\uC774 \uC77C\uCE58\uD558\uC9C0\uC54A\uC2B5\uB2C8\uB2E4.
-
+NotEmpty = \uD544\uC218 \uC815\uBCF4\uC785\uB2C8\uB2E4.
