카카오 api 수정 /

--- a/2weeks/src/main/resources/messages/messages_ko.properties
+++ b/2weeks/src/main/resources/messages/messages_ko.properties
@@ -1,12 +1,13 @@
-NotEmpty.member.user_Id = \uD544\uC218 \uC815\uBCF4\uC785\uB2C8\uB2E4.
-Pattern.member.user_Id= \uC544\uC774\uB514\uB97C \uB2E4\uC2DC \uC785\uB825\uD574\uC8FC\uC138\uC694. 
+NotEmpty.member.user_Id = ID는 필수 정보입니다.
+Pattern.member.user_Id= 조건에 맞게 아이디를 작성해주세요. 
 
-user_Id=\uC5D0\uB7EC \uBA54\uC138\uC9C0 \uD14C\uC2A4\uD2B8
-
-NotEmpty.member.user_Email = \uD544\uC218 \uC815\uBCF4\uC785\uB2C8\uB2E4.
+NotEmpty.member.user_Email = 이메일을 작성해주세요.
 Email.member.user_Email 
 
-NotEmpty.member.user_Pw = \uBE44\uBC00\uBC88\uD638\uB97C \uC791\uC131\uD574\uC8FC\uC138\uC694
-Pattern.member.user_Pw = \uD328\uC2A4\uC6CC\uB4DC\uB97C \uB2E4\uC2DC \uC785\uB825\uD574\uC8FC\uC138\uC694.
+NotEmpty.member.user_Pw = 패스워드는 필수 정보입니다.
+Pattern.member.user_Pw = 조건에 맞게 비밀번호를 작성해주세요. 
 
-NotEmpty = \uD544\uC218 \uC815\uBCF4\uC785\uB2C8\uB2E4.
+NotEmpty = 필수 정보입니다.
+
+
+user_Id=\uC5D0\uB7EC \uBA54\uC138\uC9C0 \uD14C\uC2A4\uD2B8
